--- a/index.html
+++ b/index.html
@@ -5,4 +5,9 @@
 <body>
 Esse é meu site    
 </body> 
+<ul>          
+<li><a href="index.html">Home</a></li>   
+<li><a href="sobre.html">Sobre</a></li>      
+<li><a href="contato.html">Contato</a></li>  
+</ul>
 </html>
